crates/gt-snap/tests/snapshots/wire_format__clean_drive_tuned.snap
---
source: crates/gt-snap/tests/wire_format.rs
expression: "ResponseDigest::of(&response)"
---
ResponseDigest {
    points: 40,
    snapped: 40,
    interpolated: 0,
    unsnapped: 0,
    discontinuity_indices: [],
    first_point: Some(
        "SnappedPoint { lat: 55.678719, lon: 12.564515, kind: Snapped, edge_index: Some(0), distance_along_edge: Some(0.131574), distance_from_trace_point: Some(1.931548), begin_route_discontinuity: false, end_route_discontinuity: false }",
    ),
    edges: 32,
    road_classes: {
        "Tertiary",
    },
    surfaces: {
        "PavedSmooth",
    },
    speed_limits: {
        "50 km/h",
    },
    shape_chars: 183,
    osm_changeset: Some(
        1783810896,
    ),
    confidence_score: Some(
        1.0,
    ),
    warnings: 0,
}
